tests/snapshots/trace_cli@7744324739293809179.snap
---
source: tests/trace_cli.rs
info: "save\nset structural\noptions"
---
Current ruleset was saved
The two rulesets are described by the following sets of rules, with differences highlighted.
The old ruleset is on the left, and the new one on the right.

 real, m ⊢ p0: T0,  real, m ⊢ p1: T1                                              | real, m ⊢ p0: T0,  real, m ⊢ p1: T1
 --------------------------------------- "Constructor"                            | --------------------------------------- "Constructor"
 _, m ⊢ [p0, p1]: [T0, T1]                                                        | _, m ⊢ [p0, p1]: [T0, T1]

 inh, ro ⊢ p0: &T0,  inh, ro ⊢ p1: &T1                                            |  
 ----------------------------------------- "ConstructorRef"                       |  
 r, m ⊢ [p0, p1]: &[T0, T1]                                                       |  

 inh, m ⊢ p0: &mut T0,  inh, m ⊢ p1: &mut T1                                      |  
 ----------------------------------------------- "ConstructorRef"                 |  
 r, m ⊢ [p0, p1]: &mut [T0, T1]                                                   |  

 inh, ro ⊢ [p0, p1]: &T                                                           |  
 ------------------------ "ConstructorMultiRef"                                   |  
 r, m ⊢ [p0, p1]: &&T                                                             |  

 inh, ro ⊢ [p0, p1]: &T                                                           |  
 -------------------------- "ConstructorMultiRef"                                 |  
 r, m ⊢ [p0, p1]: &&mut T                                                         |  

 inh, ro ⊢ [p0, p1]: &T                                                           |  
 -------------------------- "ConstructorMultiRef"                                 |  
 r, m ⊢ [p0, p1]: &mut &T                                                         |  

 inh, m ⊢ [p0, p1]: &mut T                                                        |  
 ------------------------------ "ConstructorMultiRef"                             |  
 r, m ⊢ [p0, p1]: &mut &mut T                                                     |  

 real, ro ⊢ p: T                                                                  | real, ro ⊢ p: T
 ----------------- "Deref"                                                        | ----------------- "Deref"
 r, m ⊢ &p: &T                                                                    | r, m ⊢ &p: &T

 real, m ⊢ p: T                                                                   | real, m ⊢ p: T
 ----------------------- "Deref"                                                  | ----------------------- "Deref"
 r, m ⊢ &mut p: &mut T                                                            | r, m ⊢ &mut p: &mut T

 real, ro ⊢ p: T                                                                  |  
 ------------------- "DerefMutWithShared"                                         |  
 r, m ⊢ &p: &mut T                                                                |  

 inh, m ⊢ x: &T                                                                   | inh, m ⊢ x: &T
 -------------------- "BindingBorrow"                                             | -------------------- "BindingBorrow"
 real, m ⊢ ref x: T                                                               | real, m ⊢ ref x: T

                                                                                  | inh, m ⊢ x: &&T
                                                                                  | -------------------- "BindingBorrow"
                                                                                  | inh, m ⊢ ref x: &T

                                                                                  | inh, m ⊢ x: &&mut T
                                                                                  | ------------------------ "BindingBorrow"
                                                                                  | inh, m ⊢ ref x: &mut T

 inh, m ⊢ x: &mut T                                                               | inh, m ⊢ x: &mut T
 ------------------------ "BindingBorrow"                                         | ------------------------ "BindingBorrow"
 real, m ⊢ ref mut x: T                                                           | real, m ⊢ ref mut x: T

                                                                                  | inh, m ⊢ x: &mut &T
                                                                                  | ------------------------ "BindingBorrow"
                                                                                  | inh, m ⊢ ref mut x: &T

                                                                                  | inh, m ⊢ x: &mut &mut T
                                                                                  | ---------------------------- "BindingBorrow"
                                                                                  | inh, m ⊢ ref mut x: &mut T

                                                                                  | 
 ------------- "Binding"                                                          | ------------- "Binding"
 r, m ⊢ x: T                                                                      | r, m ⊢ x: T

                                                                                  | 
 ----------------- "Binding"                                                      | ----------------- "Binding"
 r, m ⊢ mut x: T                                                                  | r, m ⊢ mut x: T


allow_ref_pat_on_ref_mut: true -> false
always_inspect_bm: false
dont_eat_mut_inside_shared: false
downgrade_mut_inside_shared: false
eat_inherited_ref_alone: true
fallback_to_outer: false
inherited_ref_on_ref: "EatOuter"
match_constructor_through_ref: true -> false
mut_binding_on_inherited: "Keep"
ref_binding_on_inherited: "Error" -> "AllocTemporary"
simplify_deref_mut: true -> false
Comparing against the saved ruleset. Use `unsave` to forget the saved ruleset.
The current ruleset is on the left, and the saved one on the right.
allow_ref_pat_on_ref_mut: false -> true
always_inspect_bm: false
dont_eat_mut_inside_shared: false
downgrade_mut_inside_shared: false
eat_inherited_ref_alone: true
fallback_to_outer: false
inherited_ref_on_ref: "EatOuter"
match_constructor_through_ref: false -> true
mut_binding_on_inherited: "Keep"
ref_binding_on_inherited: "AllocTemporary" -> "Error"
simplify_deref_mut: false -> true
