tests/snapshots/trace_cli@7942353826897088411.snap
---
source: tests/trace_cli.rs
info: help
---
Commands: help, set, options, rules, save, unsave, swap, compare, quit

- help: view this help message
- set: set options; type `set` for details
- options: view the current value of each option
- rules: display the typing rules implied by the current options
- save: save the current ruleset, for use with `swap` and `compare`
- unsave: forget the saved ruleset
- swap: swap the current ruleset with the saved one
- compare: compare the current ruleset against the saved one
- quit: quit
